frontend/assets/styles.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

// Layout -----------------------------------------------

:root {
  --column-width: 72px;
  --gutter-width: 24px;
  --container-width: calc(
    (var(--column-width) * 12) + (var(--gutter-width) * 11)
  );
}


// Fonts -----------------------------------------------

body {
  font-family: "Inter", sans-serif;
  color: var(--color-cold-night) !important;
}

h1 {
  font-size: 32px !important;
  font-weight: 700 !important; // Bold
  color: var(--color-cold-night) !important;
}

h2 {
  font-size: 20px !important;
  font-weight: 600 !important; // Medium
  color: var(--color-cold-night) !important;
}

h3 {
  font-size: 16px !important;
  font-weight: 600 !important; // Medium
  color: var(--color-cold-night) !important;
}

a {
  color: var(--color-cold-purple) !important;
  text-decoration: none !important;
  font-weight: 400 !important; // Regular
}

.title-container {
  width: 100%;
  text-align: center;
}

.copy {
  @extend .result-value-small;
  margin-top: 24px !important;
  margin-bottom: 24px !important;
}

.markdown-body h2 > a,
.markdown-body h3 > a,
.prose h2 > a,
.prose h3 > a,
.content h2 > a,
.content h3 > a {
  color: inherit !important;
  text-decoration: none;
}

h1 > a,
h2 > a,
h3 > a,
h4 > a,
h5 > a,
h6 > a {
  font-weight: inherit !important;
  color: inherit !important;
  text-decoration: none !important;
}

// Lists
ol {
  list-style: decimal !important; // Ensure numbers appear
}

ul {
  list-style-type: disc !important;
  margin: 0 !important;
  padding: 0.5rem 0 1.5rem 1.5rem !important;
}

li {
  margin: 0 !important;
}

li::marker {
  color: var(--color-cold-night) !important;
}

.prose {
  font-size: 14px !important;
  line-height: 28px !important;
  color: var(--color-cold-night) !important;
}

.prose li {
  margin-bottom: 12px !important;
  color: var(--color-cold-night) !important;
}

.prose strong,
.prose b {
  color: inherit; /* Inherit the color from the parent element */
  font-weight: 600 !important; // Medium
}

// Labels
.label {
  font-size: 11px !important;
  font-weight: 600 !important;
  text-transform: uppercase;
  margin-right: 12px;
  color: var(--color-cold-night);
}

.label-key {
  @extend .label;
  padding: 0;
}

.label-key-provision-article {
  @extend .label-key;
  text-transform: none;
}

.label-key-provision-toggle {
  @extend .label-key;
  font-weight: 600 !important;
  text-transform: capitalize;
  font-size: 10px !important;
  @apply text-sm text-gray-600;
}

.label-jurisdiction {
  @extend .label;
  background-color: var(--color-cold-gray-alpha);
  padding: 3px 7px;
  display: inline-flex;
  align-items: center;
  flex-shrink: 0;
}

.label-question {
  @extend .label;
  color: var(--color-label-question);
  padding: 2px 6px;
  background-color: var(--color-label-question-alpha);
  border: 1px solid var(--color-label-question);
}

.label-court-decision {
  @extend .label;
  color: var(--color-label-court-decision);
  padding: 2px 6px;
  background-color: var(--color-label-court-decision-alpha);
  border: 1px solid var(--color-label-court-decision);
}

.label-instrument {
  @extend .label;
  color: var(--color-label-instrument);
  padding: 2px 6px;
  background-color: var(--color-label-instrument-alpha);
  border: 1px solid var(--color-label-instrument);
}

.label-literature {
  @extend .label;
  color: var(--color-label-literature);
  padding: 2px 6px;
  background-color: var(--color-label-literature-alpha);
  border: 1px solid var(--color-label-literature);
}

.label-arbitration {
  @extend .label;
  color: var(--color-label-arbitration);
  padding: 2px 6px;
  background-color: var(--color-label-arbitration-alpha);
  border: 1px solid var(--color-label-arbitration);
}

.label-theme {
  @extend .label;
  color: var(--color-cold-night-alpha);
  background-color: white;
  padding: 2px 6px;
  border: 1px solid var(--color-cold-night-alpha-25);
}

// Results
.result-value {
  font-weight: 700 !important; // Bold
  color: var(--color-cold-night);
  word-wrap: break-word; // Allows breaking within words if necessary
  word-break: break-word; // Breaks words that are too long
  white-space: pre-wrap; // Preserves whitespace and line breaks, but also allows wrapping
}

.result-value-large {
  @extend .result-value;
  font-size: 28px !important;
  line-height: 34px !important;
  margin-top: 6px !important;
  margin-bottom: 24px !important;
}

.result-value-medium {
  @extend .result-value-large;
  font-size: 20px !important;
  line-height: 28px !important;
}

.result-value-small {
  @extend .result-value-large;
  font-size: 14px !important;
  font-weight: 400 !important; // Regular
  line-height: 26px !important;
  // margin: 0 !important;
  white-space: normal;
}

.result-value-small-citation {
  @extend .result-value-small;
  font-family: "IBM Plex Mono", monospace;
  font-size: 12px !important;
  background-color: var(--color-cold-gray-alpha);
  padding: 0.8em 1em 0.8em 1em;
  line-height: 1.8em !important;
}

// UI Elements -----------------------------------------------

.suggestion-button {
  color: var(--color-cold-purple) !important;
  font-size: 20px !important;
  font-weight: 500 !important;
  line-height: 1.6em !important;
  text-decoration: none !important;
  padding: 0 !important;
}

.link-button {
  @extend .suggestion-button;
  font-size: 14px !important;
  font-weight: 400 !important; // Regular
}

.showmoreless-icon-large {
  font-size: 1.4rem !important;
  transform: translateY(4px) !important;
}

.external-link-icon {
  display: inline;
  width: 1em;
  vertical-align: top !important;
  margin-left: 0.2em !important;
  margin-top: 0.5em !important;
  margin-bottom: 0em !important;
}

// Info Box in Jurisdiction Map
.info {
  position: absolute;
  z-index: 1000;
  background: white;
  font-family: "Inter", Arial, sans-serif;
  padding-right: 12px;
  padding-bottom: 6px;
}

// USelectmenu
.cold-uselectmenu {
  width: 100% !important;
}
/* ... */

